--- a/deploy/bypass-tcpip-daemonset.yaml
+++ b/deploy/bypass-tcpip-daemonset.yaml
@@ -17,14 +17,15 @@ spec:
       tolerations:
       # this toleration is to have the daemonset runnable on master nodes
       # remove it if your masters can't run pods
-      - key: node-role.kubernetes.io/master
-        effect: NoSchedule
+      # - key: node-role.kubernetes.io/master
+      #   effect: NoSchedule
       containers:
       - name: bypass-tcpip
-        image: intel/istio-tcpip-bypass:latest
-        imagePullPolicy: IfNotPresent
+        image: docker.io/tanjunchen/ebpf-tanjunchen:test
+        imagePullPolicy: Always
         securityContext:
-            privileged: true
+          # 特权模式 
+          privileged: true
         volumeMounts:
         - name: sysfs
           mountPath: /sys/fs
