--- a/deploy/nginx.yaml
+++ b/deploy/nginx.yaml
@@ -50,6 +50,8 @@ spec:
           sysctl -w net.ipv4.ip_local_port_range="1024 65535"
           sysctl -w net.ipv4.tcp_tw_reuse=1
           sysctl -w fs.file-max=1048576
+      nodeSelector:
+        ebpf: ebpf
       containers:
         - name: nginx
           image: nginx:1.14.2
